# webshot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: comparison-config.yaml  config.yaml  pdf-config.yaml  simple-config.yaml
src/: browser.rs  comparison.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  screenshot.rs
tests/: integration.rs
